# pydantic-introduction

./: LICENSE  README.md  article.md
demo/: Untitled.ipynb  pydantic-2021.ipynb  pydantic.ipynb  pydantic_more_examples.ipynb  pyproject.toml
