[tool.poetry]
name = "pydantic-intro-demo"
version = "0.1.0"
description = "Introduction to pydantic, code demo"
authors = ["Alexander Hultnér <ahultner@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.4"
jupyterlab = "^2.1.0"
bpython = "^0.19"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
