[tool.poetry]
name = "pydantic-intro-demo"
version = "0.1.0"
description = "Introduction to pydantic, code demo"
authors = ["Alexander Hultnér <ahultner@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
jupyterlab = "^3.0.12"
bpython = "^0.21"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
mypy = "^0.812"
python-devtools = "^2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
